scss/journey.scss
$primary-color : #74daad; // green
$primary-color-dark : #4eb185;
$secondary-color : #FFE781; // yellow
$secondary-color-dark : #FFD836;
$black: #3e3632;
$grey-dark: #7a7e7e;
$grey: #e8e9e9;
$grey-light: #f7f7f7;
$white: #ffffff;


// placeholder color to grey-light
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    color: $grey-light;
}
::-moz-placeholder { /* Firefox 19+ */
    color: $grey-light;
}
:-ms-input-placeholder { /* IE 10+ */
    color: $grey-light;
}
:-moz-placeholder { /* Firefox 18- */
    color: $grey-light;
}

/// Computes a top-shadow for a card effect.
/// @param {Number} $depth - depth level
/// @return {List}
@function top-shadow($depth) {
  $primary-offset: nth(1.5 3 10 14 19, $depth) * 1px;
  $blur: nth(1.5 3 10 14 19, $depth) * 4px;
  $color: rgba(black, nth(.12 .16 .19 .25 .30, $depth));

  @return 0 $primary-offset $blur $color;
}
/// Computes a bottom-shadow for a card effect.
/// @param {Number} $depth - depth level
/// @return {List}
@function bottom-shadow($depth) {
  $primary-offset: nth(1.5 3 6 10 15, $depth) * 1px;
  $blur: nth(1 3 3 5 6, $depth) * 4px;
  $color: rgba(black, nth(.24 .23 .23 .22 .22, $depth));

  @return 0 $primary-offset $blur $color;
}
/// Gives a card depth effect.
/// @param {Number} $depth - depth level (between 1 and 5)
/// @link http://www.google.com/design/spec/layout/layout-principles.html#layout-principles-dimensionality Google Design
/// @requires {function} top-shadow
/// @requires {function} bottom-shadow
@mixin card($depth) {
  @if $depth < 1 {
    box-shadow: none;
  } @else if $depth > 5 {
    @warn "Invalid $depth `#{$depth}` for mixin `card`.";
  } @else {
    box-shadow: bottom-shadow($depth), top-shadow($depth);
  }
}


html {
    font-size: 16px;
    font-family: 'Lemonada', 'Jeju Gothic', cursive;
}

hr {
    margin: 1.5rem 0 1.5rem 0;
    border: 0.5px solid white;
}

// this is for the holyGrail layout(flex)
// and the basic frame
// https://philipwalton.github.io/solved-by-flexbox/demos/holy-grail/
body {
    display: flex;
    flex-direction: column;
    position: relative;
    min-height: 100vh;

    .wrapper {
        display: flex;
        flex: 1;
        .sidebar {
            overflow-y: scroll;
            overflow-x: hidden;
            flex: 0 0 16rem;
            height: 100vh;
        }
        #sidebar_btn {
            position: fixed;
            top: 1rem;
            left: 2rem;
        }
        #content_btn{
            position: fixed;
            top: 1rem;
            right: 2rem;
        }
        section {
            flex-grow:1;
            display: flex;
            position: relative;
            .search-bar {
                z-index: 999;
                position: absolute;

                display: flex;
                flex-flow: column;
            }
            .wikiResult {
                z-index: 998;
                position: absolute;
                bottom : 1rem;
                right : 1rem;

                display: flex;
                flex-flow: column;
            }

            .google-map {
                flex-grow: 1;
            }
        }
    }
}

// infowindow style for google map api
#pano {
    width: 280px;
    height: 280px;
}

#sidebar_btn, #content_btn {
    background-color: $secondary-color-dark;
    padding: 0.4rem 1rem 0.4rem 1rem;
	border-radius:8px;
    border: 0;
    color: $grey-light;
    @include card(1);

    opacity: 0;
}
#sidebar_btn:hover, #content_btn:hover {
	background-color: #8B0000;
}
#sidebar_btn:focus, #content_btn:focus {
    outline: none;
}
#sidebar_btn:active, #content_btn:active {
    @include card(0);
}

// sidebar design
.sidebar {
    background-color: $primary-color;
    border-right: 2px solid $secondary-color;
    color: $grey-light;
    padding-left: 1rem;
    @include card(3);
    .sidebar-top {
        padding-top: 3rem;
    }

    .easyFilter {
        display: flex;
        flex-flow: column;
        padding-right: 2rem;
    }

    ul {
        list-style: none;
        padding: 0;
        img {
            width:20px;
        }
    }

    .foundBox {
        display: flex;
        flex-flow: row wrap;
        .foundPlace {
            display: block;

            @include card(1);
            background-color: $secondary-color;
            color: $grey-dark;
            font-size: 0.6rem;
            padding: 0.6rem;
            margin: 0.4rem 0.4rem 0.4rem 0rem;
            border-radius: 0.5rem;
            cursor: pointer;

            max-width: 100px;
            height: 0.8rem;
            overflow:hidden;

            white-space: nowrap;
            text-overflow: ellipsis;
        }
        .foundPlace:hover {
            background-color: $secondary-color-dark;
            color: black;
        }
    }
    form {
        ul > .pressed {
            background-color: $primary-color-dark !important;
            color: white !important;
        }
        ul {
            .item-holder {
                position: relative;
                @include card(1);
                padding: 0.5rem 0.5rem 0.5rem 1rem;
                margin: 0.8rem 0.8rem 0.8rem 0;
                border-radius: 0.5rem;
                cursor: pointer;
                background-color: $white;
                color: $grey-dark;

                li {
                    font-size: 1rem;
                }
                span {
                    padding-top: 0.8rem;
                    font-size: 0.8rem;
                }
                .origin:empty:before {
                    content: attr(data-placeholder);
                }
                .destination:empty:before {
                    content: attr(data-placeholder);
                }
                .to {
                    font-size: 0.6rem;
                    opacity: 0.8;
                }

                button {
                    width: 1rem;
                    height: 1rem;
                    right:1rem;
                    bottom: 0.5rem;
                    position: absolute;
                    background: url(../public/img/clear.png);
                    background-size: cover;
                    border: 0;
                }

                button:focus {
                    outline: none;
                }
                button:hover {
                    background: url(../public/img/clear_out.png);
                    background-size: cover;
                }
            }
            .item-holder:hover {
                background-color: $primary-color-dark;
                color: white;
            }

        }
    }

    .adding-route {
        background-color: $secondary-color;
        padding: 0.5rem 0rem 0.5rem 1rem;
        border-radius: 0.5rem;
        margin-right: 1rem;
        display: flex;
        justify-content: flex-end;

        input {
            border: none;
            background: transparent;
            margin: 0 1rem 0 2rem;
            border-bottom: 1.2px $primary-color solid;
            width: 130px;
        }
        input:focus, button:focus {
            outline: none;
        }
        button {
            // border: none;
            background-color: $primary-color-dark;
        	border-radius:8px;
        	border:1px solid #18ab29;

        	display:inline-block;
        	color:#ffffff;
        	font-size:0.9rem;
        	padding:8px 17px;

        	text-decoration:none;
        	// text-shadow:0px 1px 0px #57c246;
        }
        button:hover {
        	background-color:$primary-color-dark;
        }
    }
    .easyFilter {

        button {
            color: $grey-dark;
            background-color: $secondary-color;
        	border-radius:8px;
            @include card(1);
            border: 0;
            margin-bottom: 1rem;
        }
        button:hover {
            background-color: $secondary-color-dark;
        }
        button:active {
            position: relative;
        	top:1px;
        }
    }
}

// content bar design
section {
    .wikiResult {
        margin:auto;
        background-color: $secondary-color;
        border-radius: 0.5rem;
        width: 400px;
        //material shadow
        @include card(2);

        max-height: 300px;
        overflow-y: scroll;
        ul {
            margin: 1.5rem 2rem 1.5rem 2rem;
            list-style: none;
            padding: 0;
            .placeName {
                font-size: 1.2rem;
                margin-bottom: 0.5rem;
            }
            .placeDesc {
                font-size: 0.8rem;
                margin-bottom: 0.8rem;
                color: rgb(10,10,10);
            }
        }

    }
    .search-bar {
        margin-top: 3rem;
        top: 1rem;
        right: 1rem;
        // zoom search design
        .zoom-search {
            background-color: $primary-color;
            padding: 0.5rem 1rem 0.5rem 1rem;
            border-radius: 0.5rem;
            width: 400px;

            //material shadow
            @include card(2);

            // vertically align inputs
            display:flex;
            #searchFilter {
                margin-left: 1rem;
            }

            // input border none, google style?
            #searchInput {
                position: relative;
                width: 100%;

                border:none;
                background: transparent;

                margin-left: 1rem;
                margin-right: 1rem;

                color:$white;

                border-bottom: 1px $white solid;
            }
            //to remove focus effects
            input:focus {
                outline:none;
            }
        }
        .zoom-select {
            margin-bottom: 0.5rem;
        }
        .search-ul {
            margin:0;
            padding:0;
            list-style: none;
            width:400px;
            .search-holder {
                position:relative;
                .search-result {
                    margin-top: 0.5rem;
                    background-color: $primary-color;
                    opacity: 0.8;
                    padding: 0.5rem 1rem 0.5rem 1rem;
                    border-radius: 0.5rem;
                    width: 100%;
                    min-height: 100px;

                    //material shadow
                    @include card(2);
                    .search-desc {
                        margin: 0.5rem 0 0.5rem 1rem;
                        color: black;
                    }
                }
                .btns {
                    bottom:1rem;
                    right: 0;
                    position: absolute;
                }
            }
        }
    }
}

// media under 1199
@media (max-width: 1199px) {
    .search-bar {
        transition: all 0.3s ease;
        right: -30rem !important;
    }
    .wikiResult {
        transition: all 0.3s ease;
        right: -30rem !important;

    }
    .search-unfolded {
        right: 1rem !important;
    }
    .sidebar {

        display: block;
        position: fixed;
        height: 100vh;
        width: 16rem;
        // box-shadow:
        left:-17rem;
        z-index: 1001;

        transition: all 0.3s ease;
    }
    #sidebar_btn, #content_btn {
        position: absolute;
        z-index: 1002;
        opacity:1;
    }
    .unfolded {
        left: 0rem;
    }
}

// media under 500
@media (max-width: 500px) {

    .zoom-search {
        max-width: 80vw;
        margin: auto;
    }
    .search-ul {
        max-width: 80vw;
        margin: auto;
    }

    section {
        .wikiResult {
            max-width: 80vw;
            max-height: 200px;
            ul {
                .placeName {
                    font-size: 1rem;
                    margin-bottom: 0.5rem;
                }
                .placeDesc {
                    font-size: 0.65rem;
                    margin-bottom: 0.8rem;
                    color: rgb(10,10,10);
                }
            }
        }
    }
}

